finish the design for header and footer

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 div {
-  border: solid black 1px;
   margin: 5px;
   padding: 5px;
 }
@@ -12,6 +11,33 @@ header {
 }
 header h1 {
   color: #2b78e4;
+  margin: 2px;
+}
+
+.logo {
+  background-color: #2b78e4;
+  width: 70px;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-media {
+  display: flex;
+  justify-content: space-between;
+}
+.social-media img {
+  width: 80px;
+}
+
+.contact-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.contact-info p {
+  margin: 2px;
 }
 
 footer {
