--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,20 @@ header h1 {
   margin: 2px;
 }
 
+.training-option {
+  background-color: #ff9900;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #ff9900;
+}
+.training-option img {
+  width: 250px;
+}
+.training-option h3 {
+  color: #2b78e4;
+}
+
 footer {
   background-color: #ff9900;
   display: flex;
