--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@ div {
   padding: 5px;
 }
 
+body {
+  background-color: #2b78e4;
+  margin: 0px;
+}
+
 header {
   background-color: #ff9900;
   display: flex;
@@ -45,7 +50,6 @@ header h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #ff9900;
 }
 .training-option img {
   width: 250px;
@@ -58,6 +62,44 @@ footer {
   background-color: #ff9900;
   display: flex;
   flex-direction: column;
+}
+
+@media screen and (min-width: 600px) {
+  header {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+  }
+  header .header-title {
+    padding-left: 15%;
+    font-size: 50px;
+  }
+
+  .main-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  .training-option img {
+    width: 350px;
+    height: 350px;
+  }
+
+  footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .social-media img {
+    margin-right: 20px;
+  }
+
+  .contact-info {
+    display: flex;
+    align-items: flex-end;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
