--- a/css/style.scss
+++ b/css/style.scss
@@ -67,3 +67,42 @@ footer{
     @include header-footer();
 }
 
+@media screen and (min-width: 600px){
+    header{
+        display: flex;
+        flex-direction: row;
+        text-align: center;
+        .header-title{
+            padding-left: 15%;
+            font-size: 50px;
+        }
+    }
+
+    .main-content{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+    .training-option{
+        img{
+            width: 350px;
+            height: 350px;
+        }
+    }
+    footer{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+    }
+    .social-media{
+        img{
+            margin-right: 20px;
+        }
+    }
+    .contact-info{
+        //width: 60%;
+        display: flex;
+        align-items: flex-end;
+    }
+}
